--- a/sass/page/_index_mediaQ.scss
+++ b/sass/page/_index_mediaQ.scss
@@ -1,56 +1,104 @@
 /* -----------Index mediaQuery ----------*/
-main {
-    @media (max-width: 480px) {
-        .banner {
-            flex-direction: column;
-            height: auto;
-            padding: 4rem 1rem;
-            text-align: center;
-            
-            .banner-text {
-                h1 {
-                    font-size: 2rem;
-                    line-height: 1.2;
-                }
-                p {
-                    font-size: 1rem;
-                }
-            }
-        }
-        .content-section {
-            flex-direction: column;      
-            text-align: center;
-            padding: 2rem 1rem;
-            .image-container { 
-                img {
-                    max-width: 250px;   
-                    margin-bottom: 1rem;
-                }
-            }
 
-            .text-container {
-                h2 {
-                    font-size: 1.2rem;
-                    margin: 0 12px 0 12px;
-                    margin-bottom: 20px;
-                }
-                p {
-                    font-size: 0.8rem;
-                    margin: 0 12px 0 12px;
-                }
+/* mobile */
+@media (max-width: 480px) {
+    .banner {
+        flex-direction: column;
+        height: auto;
+        padding: 4rem 1rem;
+        text-align: center;
+        
+        .banner-text {
+            h1 {
+                font-size: 2rem;
+                line-height: 1.2;
             }
-        }
-        div {
-            h2 {
-                .titulocategoriainicio {
-                    justify-content: start;
-                    margin-left: 0;
-                    font-size: 0.9rem;
-                    text-align: center;
-                    margin-left: 20px;
-                    margin-top: 20px;
-                }
+            p {
+                font-size: 1rem;
             }
         }
     }
+    .content-section {
+        flex-direction: column;      
+        text-align: center;
+        padding: 2rem 1rem;
+        .image-container { 
+            img {
+                max-width: 250px;   
+                margin-bottom: 1rem;
+            }
+        }
+        .text-container {
+            h2 {
+                font-size: 1.2rem;
+                margin: 0 12px 0 12px;
+                margin-bottom: 20px;
+            }
+            p {
+                font-size: 0.8rem;
+                margin: 0 12px 0 12px;
+            }
+        }
+    }
+    div{
+        h2.titulocategoriainicio {
+            justify-content: start;
+            margin-left: 0;
+            font-size: 0.9rem;
+            text-align: center;
+            margin-left: 20px;
+            margin-top: 20px;
+        }
+    }    
 }
+
+/* tablet */
+@media (min-width: 481px) and (max-width: 900px) {
+    .banner {
+        flex-direction: column;
+        height: 450px;
+        padding: 4rem 2rem;
+        text-align: center;
+        
+        .banner-text {
+            h1 {
+                font-size: 3rem;
+            }
+            p {
+                font-size: 1.2rem;
+            }
+        }
+    }
+    .content-section {
+        flex-direction: column;      
+        text-align: center;
+        padding: 3rem 2rem;
+        .image-container { 
+            img {
+                max-width: 330px;
+                margin-bottom: 1.5rem;
+            }
+        }
+        .text-container {
+            h2 {
+                font-size: 1.5rem;
+                margin-bottom: 24px;
+            }
+            p {
+                font-size: 0.9rem;
+            }
+        }
+    }
+    div{
+        h2.titulocategoriainicio {
+            justify-content: start;
+            margin-left: 0;
+            font-size: 1rem;
+            text-align: center;
+            margin-left: 20px;
+            margin-top: 20px;
+        }
+    }    
+}
+
+
