--- a/sass/generales/_header.scss
+++ b/sass/generales/_header.scss
@@ -4,28 +4,71 @@ header {
     background-color: #F42923;
     height: auto;
     width: auto;
+
     .fondo-nav {
         a:hover {
             color: #F9F7F7;
         }
+
         .logo {
-            width: 55px;
+            width: 40px;
             border-radius: 50px;
-            margin-left: 2rem;
+            margin-left: 6rem;
         }
+
         ul.navbar-nav {
-            list-style: none; 
+            list-style: none;
             color: #000000;
             text-decoration: none;
-            font-size: 1rem;
+            font-size: 0.9rem;
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bold;
-            margin-right: 2rem;
+            margin-right: 6rem;
+
+            li.nav-item {
+                margin-right: 25px;
+
+                .nav-link {
+                    position: relative;
+                    color: #272725;
+                    font-weight: bold;
+                    transition: 0.3s ease;
+                    padding-bottom: 6px;
+
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                        width: 0%;
+                        height: 2px;
+                        background: currentColor;
+                        transition: width 0.3s ease;
+                    }
+
+                    /* Hover */
+                    &:hover {
+                        color: #F9F7F7;
+                    }
+
+                    &:hover::after {
+                        width: 100%;
+                    }
+
+                    /* Página activa */
+                    &.active {
+                        color: #F9F7F7;
+                    }
+
+                    &.active::after {
+                        width: 100%;
+                    }
+                }
+            }
         }
     }
 }
-
-
 
 
 
