--- a/sass/page/_contacto_mediaQ.scss
+++ b/sass/page/_contacto_mediaQ.scss
@@ -1,4 +1,7 @@
 /*--------- Contacto mediaQuery-------*/
+
+/* mobile */
+
 @media (max-width: 480px) {
     .presupuesto {
         padding-top: 10px;
@@ -12,6 +15,57 @@
                     legend {
                         font-size: medium;
                     }
+                }
+            }
+        }
+    }
+}
+
+
+/* tablet */
+
+@media (min-width: 481px) and (max-width: 900px) {
+    .presupuesto {
+        padding-top: 15px;
+
+        .presupuesto-contenido {
+            display: flex;
+            flex-direction: column;  
+            gap: 40px;
+            max-width: 90%;
+            margin: 0 auto;
+
+            .presupuesto-texto {
+                text-align: center;
+
+                .titulo-principal {
+                    font-size: 2.1rem;
+                    margin-bottom: 15px;
+                    text-align: center;
+                }
+
+                p {
+                    font-size: 1rem;
+                }
+            }
+
+            .formulario {
+                padding: 30px;
+                max-width: 600px;
+                margin: 0 auto;
+
+                .form-radio {
+                    margin-bottom: 18px;
+
+                    legend {
+                        font-size: 1rem;
+                    }
+                }
+
+                button,
+                .btn-enviar {
+                    width: 100%;
+                    font-size: 1rem;
                 }
             }
         }
