--- a/sass/page/_proyectos.scss
+++ b/sass/page/_proyectos.scss
@@ -13,14 +13,14 @@
     }
     .row {
         margin-top: 0px;
-        margin-left: 180px;
-        margin-right: 180px;
-        margin-bottom: 100px;
+        margin-left: 250px;
+        margin-right: 250px;
+        margin-bottom: 150px;
         .col {
             .card {
-                max-width: 300px;      
+                max-width: 250px;      
                 margin: auto; 
-                background-color: #F9F7F7;
+                background-color: #Ffffff;
                 border-color: #dedede;
                 border-radius: 14px;
                 box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -30,7 +30,7 @@
                     box-shadow: 0 6px 12px rgba(0,0,0,0.15);
                 }
                 .card-img-top {
-                    height: 400px;         
+                    height: 350px;         
                     object-fit: cover;
                     border-top-left-radius: 12px;
                     border-top-right-radius: 12px;
